# munchy

./: '  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  compile_flags.txt  demo.tape  munchy.c
.github/workflows/: makefile.yml
include/: base64.c  dcsync.c  dcsync.h  dcsync_alloc.c  drsuapi_format.c  gate.c  gate.h  info.h  lsa.c  lsa.h  lsass.c  lsass.h  md5.h  token.c  token.h
include/asn1/: kull_m_asn1.c  kull_m_asn1.h  msasn1.h
include/base64/: base64.h
include/common/: common.h
include/dc_sync/: dcsync.c  dcsync.h  detect.ps1  kerberos_shit.c  rpc.c  rpc_dc.h
include/drsr/: drsuapi.h  drsuapi_c.c  ms-drsr-custom.c  ms-drsr-custom_definitions.c  ms-drsr.h
include/drsr/backup/: AssemblyInfo.c  drsr.h  drsr_c.c  drsr_imports.h  pch.h
include/info/: info.h
include/kerberos/: kerb.c  kerb.h  kull_m_crypto_system.h  pac.c
include/lsa/: lsa.c  lsa.h
include/lsass/: lsass.c  lsass.h
include/potato/: potato.c  potato.h
include/sha256/: sha256.h
include/token/: token.c  token.h
src/: main.rs
src/utils/: api.rs  mod.rs  token.rs
