[package]
name = "munchy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Environment",
    "Win32_System_SystemInformation",
]

[dependencies.windows]
version = "0.61.3"
features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_Security_Authentication", "Win32_Security_Authentication_Identity", "Win32_System_WindowsProgramming", "Win32_System_SystemServices"]
